--- a/css/styles.css
+++ b/css/styles.css
@@ -5941,6 +5941,8 @@ a.close.disabled {
   color: #212529;
 }
 
+/* Carousel Styles */
+
 .carousel {
   position: relative;
 }
@@ -5974,6 +5976,10 @@ a.close.disabled {
   .carousel-item {
     transition: none;
   }
+}
+
+.bell-icon {
+  color: #6d6e70;
 }
 
 .carousel-item.active,
@@ -9056,10 +9062,10 @@ button.bg-black:focus {
     margin-right: 3rem !important;
   }
 
-  .mb-lg-5,
+  /* .mb-lg-5,
 .my-lg-5 {
     margin-bottom: 3rem !important;
-  }
+  } */
 
   .ml-lg-5,
 .mx-lg-5 {
@@ -10290,7 +10296,7 @@ body {
 }
 
 .process-section {
-  padding-top: 2rem;
+  padding-top: 5rem;
 }
 .process-section .featured-text {
   padding: 2rem;
